--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filmes",
+  "name": "senacfilmesapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "10.4.15",
+    "lucide-react": "^0.268.0",
+    "next": "13.4.19",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
