--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "autoprefixer": "10.4.15",
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
